@startuml
class gui.BrushPane {
- Image pencilSrc
- Image fountainSrc
- Image highlightASrc
- Image highlightBSrc
- Image highlightCSrc
- Image markerSrc
- Image spraySrc
- Image eraserSrc
+ ImageView pencilIcon
+ ImageView fountainIcon
+ ImageView highlightAIcon
+ ImageView highlightBIcon
+ ImageView highlightCIcon
+ ImageView markerIcon
+ ImageView sprayIcon
+ ImageView eraserIcon
- Runnable onThemeRefreshed
- ImageView makeIcon(Image)
+ List<ImageView> getAllIcons()
+ void setOnThemeRefreshed(Runnable)
+ ImageView getIconFor(String)
+ void refreshTheme()
}


class application.Main {
+ void start(Stage)
+ {static} void main(String[])
}

class gui.CanvasPane {
- {static} int internalSize
- {static} int displaySize
+ Canvas layer0
+ Canvas layer1
+ Canvas layer2
+ Canvas layer3
- StackPane layerPane
- void redrawBackground()
+ double toInternalX(double)
+ double toInternalY(double)
+ int getInternalSize()
+ int getDisplaySize()
+ int getCanvasSize()
+ Canvas getCursorLayer()
+ void clearCursor()
}


class gui.MenuPane {
+ HBox menuBar
+ Label btnUmm
+ Label btnNewCanvas
+ Label btnExportGIF
+ Label btnTheme
+ Label btnExit
+ ContextMenu themeMenu
- Line bottomLine
- Font font
- Label createBtn(String)
# void layoutChildren()
}




javafx.scene.layout.VBox <|-- gui.BrushPane
javafx.application.Application <|-- application.Main
javafx.scene.layout.Pane <|-- gui.CanvasPane
gui.Pane <|-- gui.MenuPane
@enduml